--- a/projects/wechat-link/Cargo.toml
+++ b/projects/wechat-link/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["package.json", "tests/**"]
 
 [dependencies]
 reqwest = { version = "0.12.5" }
+qr2term = "0.3.1"
 tokio = "1.39.2"
 
 [dev-dependencies]
