--- a/projects/wechat-link/Cargo.toml
+++ b/projects/wechat-link/Cargo.toml
@@ -13,9 +13,11 @@ edition = "2021"
 exclude = ["package.json", "tests/**"]
 
 [dependencies]
-reqwest = { version = "0.12.5" }
+reqwest = { version = "0.12.5", features = [] }
 qr2term = "0.3.1"
 tokio = "1.39.2"
+serde = { version = "1.0.204", features = ["derive"] }
+serde-xml-rs2 = "0.3.0"
 
 [dev-dependencies]
 
