--- a/projects/wechat-dump/Cargo.toml
+++ b/projects/wechat-dump/Cargo.toml
@@ -16,14 +16,7 @@ exclude = ["package.json", "tests/**"]
 [dependencies]
 tokio = { version = "1.39.2", features = ["full"] }
 hex = "0.4.3"
-windows = { version = "0.58.0", features = [
-    "System_Diagnostics", "Win32_System_Threading", "Foundation_Collections",
-    "Win32_System_Diagnostics_Debug",
-    "Win32_System_ProcessStatus",
-    "Win32_System_Kernel",
-    "Wdk_System",
-    "Wdk_System_Threading"
-] }
+windows = { version = "0.58.0", features = ["System_Diagnostics", "Win32_System_Threading", "Foundation_Collections", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Wdk_System", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem"] }
 
 [dependencies.wechat-link]
 version = "*"
