--- a/projects/wechat-dump/Cargo.toml
+++ b/projects/wechat-dump/Cargo.toml
@@ -14,10 +14,12 @@ edition = "2021"
 exclude = ["package.json", "tests/**"]
 
 [dependencies]
+serde = { version = "1.0.204" }
+serde_json = "1.0.122"
 tokio = { version = "1.39.2", features = ["full"] }
 hex = "0.4.3"
-windows = { version = "0.58.0", features = ["System_Diagnostics", "Win32_System_Threading", "Foundation_Collections", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Wdk_System", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem"] }
-
+windows = { version = "0.58.0", features = ["System_Diagnostics", "Win32_System_Threading", "Foundation_Collections", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Wdk_System", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory"] }
+proc_mem = "0.1.6"
 [dependencies.wechat-link]
 version = "*"
 path = "../wechat-link"
