--- a/projects/wechat-dump-windows/Cargo.toml
+++ b/projects/wechat-dump-windows/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
-name = "wechat-windows-hooks"
-publish = false
+name = "wechat-dump-windows"
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
@@ -17,6 +16,7 @@ exclude = ["package.json", "tests/**"]
 serde = { version = "1.0.204" }
 serde_json = "1.0.122"
 tokio = { version = "1.39.2", features = ["full"] }
+indexmap = { version = "2.3.0", features = ["serde"] }
 hex = "0.4.3"
 windows = { version = "0.58.0", features = ["System_Diagnostics", "Win32_System_Threading", "Foundation_Collections", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Wdk_System", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory"] }
 proc_mem = "0.1.6"
