--- a/projects/wechat-dump-windows/Cargo.toml
+++ b/projects/wechat-dump-windows/Cargo.toml
@@ -13,16 +13,17 @@ edition = "2021"
 exclude = ["package.json", "tests/**"]
 
 [dependencies]
-serde = { version = "1.0.204" }
+serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
 tokio = { version = "1.39.2", features = ["full"] }
 indexmap = { version = "2.3.0", features = ["serde"] }
-hex = "0.4.3"
-windows = { version = "0.58.0", features = ["System_Diagnostics", "Win32_System_Threading", "Foundation_Collections", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Wdk_System", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory"] }
 proc_mem = "0.1.6"
-[dependencies.wechat-link]
-version = "*"
-path = "../wechat-link"
+hmac = "0.13.0-pre.4"
+sha1 = "0.11.0-pre.4"
+pbkdf2 = "0.13.0-pre.1"
+aes = "0.9.0-pre.1"
+rand = "0.9.0-alpha.2"
+hex = "0.4.3"
 
 [dev-dependencies]
 
